# axiom-corpus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS.md  README.md  SIGNING-COMMANDS.md  SIGNING-RUNBOOK.md  axiom-corpus  pyproject.toml  recovered-coverage-report.json  us-coverage-gaps.txt
changelog.d/: 1783982190-tx-c120.added.md  294.breaking.md  activate-management-curl.fixed.md  agents-md-live-cli-refs.fixed.md  alabama-snap-primary-policy.added.md  arizona-faa5-manual.added.md  arizona-snap-primary-policy.added.md  artifact-debt-repair.fixed.md  backlog-publish-idempotency.fixed.md  be-dg-family-benefits-amounts.added.md  be-parental-leave-career-break.added.md  be-pension-withholding-2025.added.md  be-rd38-art13-pre-2025.added.md  be-vlg-jobbonus-2025.added.md  belgian-eli-corpus.added.md  belgian-eli-german-article-headings.fixed.md  belgium-pit-autonomy-factor.added.md  bo-bolmod-tranche-1.added.md  ca-complete-rulespec-source-release.added.md  ca-composite-empty-root.fixed.md  ca-gst-hst-oracle-source.added.md  ca-inventory-repair.fixed.md  ca-rulespec-official-dependencies.added.md  california-calworks-acl-guidance.added.md  california-cdss-acin-guidance.added.md  california-code-sections.added.md  citation-path-district-plan-class.added.md  citation-path-grammar.added.md  claims-concept-refs-span-anchors.added.md  cms-original-medicare-part-a-b.added.md  co-colmod-tranche-1.added.md  colorado-ccr-section-boundaries.fixed.md  colorado-ccr-self-contained-series.fixed.md  compact-release-activation.fixed.md  concept-registry-seed.added.md  connecticut-snap-source-refetch.added.md  corpus-release-r0-manifest.added.md  corpus-release-r0-signed.added.md  crawl-command-deprecation.changed.md  dc-snap-source-refetch.added.md  (+201 more)
docs/: SOURCE-DRIFT-2026-07.md  SOURCE-DRIFT-PIT-2026-07.md  agent-ingestion-runbook.md  claims-format.md  concept-registry.md  corpus-pipeline.md  eli-adapter.md  granularity-policy-proposal.md  ingestion-manifest-plan.md  named-release-publication.md  provision-anchors.md  provision-identity.md  source-discovery-checklist.md  uk-legislation-ingestion.md
manifests/: be-birth-leave-official-documents.yaml  be-bru-mytax-road-tax-current-documents.yaml  be-bru-transfer-tax-fisconet-official-documents.yaml  be-bru-vehicle-tax-guidance-documents.yaml  be-cadastral-income-indexation-official-documents.yaml  be-cnt-minimum-wage-official-documents.yaml  be-company-car-tax-benefit-guidance-documents.yaml  be-company-car-tax-benefit-official-documents.yaml  be-dg-family-benefits-2025-amendments-official-documents.yaml  be-dg-family-benefits-amounts-eli.yaml  be-dg-family-benefits-official-documents.yaml  be-excise-official-documents.yaml  be-family-benefit-2025-amounts-official-documents.yaml  be-guaranteed-family-benefits-official-documents.yaml  be-guaranteed-family-bru-support-official-documents.yaml  be-income-tax-official-documents.yaml  be-lgaf-bru-social-housing-official-documents.yaml  be-lgaf-family-allowance-amounts-official-documents.yaml  be-onss-employer-social-security-contributions-2025-documents.yaml  be-onss-work-bonus-official-documents.yaml  be-parental-leave-official-documents.yaml  be-pension-withholding-2025-official-documents.yaml  be-pit-autonomy-factor-official-documents.yaml  be-rd38-art13-pre-2025-eli.yaml  be-statbel-health-index-official-documents.yaml  be-study-allowance-eli.yaml  be-tax-benefit-eli.yaml  be-vat-code-official-documents.yaml  be-vat-official-documents.yaml  be-vehicle-tax-code-official-documents.yaml  be-vlg-fiscal-code-official-documents.yaml  be-vlg-jobbonus-decree-documents.yaml  be-vlg-jobbonus-implementation-order-2025-documents.yaml  be-vlg-property-tax-2025-official-documents.yaml  be-vlg-social-protection-decree-documents.yaml  be-vlg-social-protection-regulation-2025-documents.yaml  be-vlg-social-protection-regulation-documents.yaml  be-wal-transfer-tax-fisconet-official-documents.yaml  be-wal-vehicle-tax-official-documents.yaml  be-worker-work-bonus-official-documents.yaml  (+235 more)
schema/: citation-path.v1.json  citation-path.v1.md
scripts/: activate_release.py  apply_release_activation_upload_migration.py  audit_release_scope_self_containment.py  audit_us_release_publishability.py  backfill_provision_identity.py  bind_inventory_source_hashes.py  build_ca_rulespec_composite_scope.py  build_concept_registry.py  build_nz_rulespec_legacy_migration.py  build_us_rulespec_source_promotion.py  check_publication_staleness.py  compose_scope_versions.py  consolidate_release_scopes.py  deduplicate_release_selector.py  extract_pl119_21_medicaid_community_engagement.py  publish_corpus.py  recover_ingest.py  recover_ingest_batch.py  release_manifest.py  repair_plan_cascade_self_containment.py  repair_us_release_source_references.py  reversion_expression_dates.py  (+2 more)
tests/: test_claims.py  (+138 more)
(+12270 files in other folders)
